2020-11-17  Tim Horton  <timothy_horton@apple.com>

        REGRESSION (r269824): YouTube media control bar sometimes flickers
        https://bugs.webkit.org/show_bug.cgi?id=219017
        <rdar://problem/71454799>

        Reviewed by Simon Fraser.

        * compositing/repaint/transparent-layer-repaint-expected.html: Added.
        * compositing/repaint/transparent-layer-repaint.html: Added.
        Add a test that:
            - repaints a backingstoreful compositing layer
            - more than once
            - in a small enough area that we use partial repaint
            - with partially-transparent pixels

        And then ensures that the background of that layer (the non-repainted part)
        remains the color that it should.

2020-11-17  Rob Buis  <rbuis@igalia.com>

        Check whether destination still can be selected
        https://bugs.webkit.org/show_bug.cgi?id=218491

        Reviewed by Ryosuke Niwa.

        Add testcase.

        * editing/deleting/delete-selection-crash-expected.txt: Added.
        * editing/deleting/delete-selection-crash.html: Added.

2020-11-16  Sam Weinig  <weinig@apple.com>

        Standardize enums that are used by Settings in preparation for autogeneration
        https://bugs.webkit.org/show_bug.cgi?id=218960

        Reviewed by Tim Horton.

        Update tests and results for change in EditingBahavior enum value "win" -> "windows".

        * editing/deleting/delete-ligature-003-expected.txt:
        * editing/deleting/delete-ligature-003.html:
        * editing/deleting/paragraph-in-preserveNewline-expected.txt:
        * editing/deleting/paragraph-in-preserveNewline.html:
        * editing/deleting/smart-editing-disabled-win.html:
        * editing/deleting/whitespace-pre-1-expected.txt:
        * editing/deleting/whitespace-pre-1.html:
        * editing/execCommand/query-command-state-expected.txt:
        * editing/execCommand/query-command-state.html: