@@ -1,3 +1,15 @@
+2020-11-17  Rob Buis  <rbuis@igalia.com>
+
+        Clean up title-text-property.html
+        https://bugs.webkit.org/show_bug.cgi?id=219025
+
+        Reviewed by Žan Doberšek.
+
+        Remove unused test function, it seems this was added
+        for debugging purposes.
+
+        * fast/dom/title-text-property.html:
+
 2020-11-17  Tim Horton  <timothy_horton@apple.com>
 
         REGRESSION (r269824): YouTube media control bar sometimes flickers
